--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.foodable_android_java">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,6 +17,16 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Foodableandroidjava"
         tools:targetApi="31">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAp7_V4N1WHpGwf-1dDQCrqvQh_6AJGDRU" />
+
+        <activity
+            android:name=".LocationActivity"
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".Home"
             android:exported="false" />
