--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,9 @@
         android:theme="@style/Theme.Foodableandroidjava"
         tools:targetApi="31">
         <activity
+            android:name=".RequestProgress"
+            android:exported="false" />
+        <activity
             android:name=".EditProfile"
             android:exported="false">
             <meta-data
@@ -31,7 +34,7 @@
 
         <activity
             android:name=".LocationActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".Home"
             android:exported="false" />
